// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Custom rendering 1`] = `
<div
  className="sc-kjoXOD jELVFZ"
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-TOsTZ cnlTxH"
    disabled={false}
  >
    <div
      className="sc-bwzfXH jlwOxs"
    >
      <div
        className="sc-bwzfXH eSqaig"
      >
        <p
          className="sc-bxivhb kOPFRV"
        >
          Select a value
        </p>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-cHGsZl zDQN"
    >
      <div
        className="sc-eHgmQL bNASzp"
      >
        <div
          className="sc-cvbbAY hPPoNG"
        >
          <div
            className="sc-chPdSV kiPOer"
          >
            <div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Bar A
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Foo B
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Bar C
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Foo D
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Bar E
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-caSCKo jtbUen"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb iBTcEE"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      <div
                        className="sc-bwzfXH eSqaig"
                      >
                        <div
                          className="sc-bwzfXH doEFQb"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb kDWgYC"
                        >
                          Bar F
                        </p>
                      </div>
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="sc-kgAjT ciiNMD"
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-ksYbfQ bABYTq"
    disabled={false}
  >
    <div
      className="sc-bwzfXH jlwOxs"
    >
      <div
        className="sc-bwzfXH emfJtP"
        onClick={[Function]}
      >
        <p
          className="sc-bxivhb jVDCXG"
        >
          <span
            className="sc-TOsTZ bzKXAe"
          >
            Search a value
          </span>
        </p>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-cJSrbW KBEED"
    >
      <div
        className="sc-brqgnP hfUywI"
      >
        <div
          className="sc-cMljjf krgCXT"
        >
          <div
            className="sc-chPdSV kiPOer"
          >
            <div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Bar A
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Foo B
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Bar C
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Foo D
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Bar E
                    </span>
                  </p>
                </div>
              </div>
              <div
                className="sc-cHGsZl hvaami"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH jMGuhn"
                >
                  <p
                    className="sc-bxivhb jpexxn"
                  >
                    <span
                      className="sc-htpNat bCblnl"
                    />
                    <span>
                      Bar F
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;
